<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2012 Google Inc.

    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
    You may obtain a copy of the License at

         http://www.apache.org/licenses/LICENSE-2.0

    Unless required by applicable law or agreed to in writing, software
    distributed under the License is distributed on an "AS IS" BASIS,
    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    See the License for the specific language governing permissions and
    limitations under the License.
-->
<resources>

    <!-- Google App Engine endpoint URL -->
    <!-- <string name="url">https://cloudnotes2012.appspot.com/_ah/api/</string> -->
    <string name="url">http://10.0.2.2:8888/_ah/api/</string>

    <!-- Name of the application in the launcher [CHAR LIMIT=NONE] -->
    <string name="app_name">Cloud Notes</string>

    <!-- Menu item text [CHAR LIMIT=NONE] -->
    <string name="accounts">Accounts</string>
    <string name="description_add">Add Tasks</string>
    <string name="task_title">Title</string>
    <string name="task_title_hint">Enter the note</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="icon_desc">Application icon</string>
    <string name="title_separator_desc">Title separator</string>
    <string name="due_date">Due Date</string>

</resources>
